fix broken CSS selectors, re #1563
git-svn-id: svn://develop.studip.de/studip/trunk@17527 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -1552,13 +1552,15 @@ div#schedule-settings-dialog-shadow {
 tr.sortable {
     background: url('../images/steelgraudunkel.gif');
 }
-tr.sortable.th.sortasc {
+
+tr.sortable th.sortasc {
     background: transparent url('../images/dreieck_up.png') no-repeat center right;
-    padding: 2px 15px;
+    padding-right: 15px;
 }
-tr.sortable.th.sortdesc {
+
+tr.sortable th.sortdesc {
     background: transparent url('../images/dreieck_down.png') no-repeat center right;
-    padding: 2px 15px;
+    padding-right: 15px;
 }
 
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
